2005-11-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	* setup.py: require GTK+ version 2.8 or newer

2005-11-01  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/diagramitem.py: added support for persistent
	properties

	* gaphor/diagram/activitynodes.py, gaphor/diagram/flow.py,
	gaphor/diagram/objectnode.py, gaphor/diagram/util.py,
	gaphor/diagram/itemactions.py, tests/test-activitynodes.py: use
	persistent properties where possible; refer to properties with
	self.props

2005-11-01  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/elementfactory.py: added __getitem__ method (live object
	browser works again)

2005-10-28  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/activitynodes.py, gaphor/diagram/objectnode.py: moved
	ObjectNodeItem class to gaphor.diagram.objectnode package

2005-10-27  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/activitynodes.py, gaphor/diagram/flow.py,
	gaphor/diagram/groupable.py, gaphor/diagram/__item__.py: added
	Groupable metaclass to automate development of groupable classes

2005-10-27 Jeroen Vlootuis <jeroen@vloothuis.net>
	* Added new object inspector panel at bottom of diagram. This makes use
	of the Zope 3 component architecture. Therefore Gaphor now depends on
	Zope 3. This dependency should be diminshed to component and
	interface. At the moment there is no seperate package for component.

	* Made Kid export handle tagged values. 

2005-10-27  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/activitynodes.py: object node has upper bound
	specification; join node has join specification; initial node naming
	reimplemented with text element and grouping
	* gaphor/diagram/flow.py: flow has name and guard implemented with text
	element (since now flows can have names)
	* gaphor/diagram/nameditem.py: added sided named elements base class
	and text element class
	* gaphor/diagram/groupable.py: added basic class for grouping different
	diagram items

2005-10-26  wrobell <wrobell@pld-linux.org>