@@ -1,3 +1,7 @@
+2005-12-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/ui/mainwindow.py: make position of objectInspector persistent.
+
 2005-11-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 	* setup.py: require GTK+ version 2.8 or newer
 
